# openpose-skeleton-3d

./: CMakeLists.txt  README.md  package.xml
msg/: COCO3d.msg  COCO3d_ARR.msg
src/: openpose_skeleton_3d_node.cpp
