<?xml version="1.0"?>
<package format="2">
  <name>openpose_skeleton_3d</name>
  <version>0.0.0</version>
  <description>The openpose_skeleton_3d package</description>

  <maintainer email="koide@aisl.cs.tut.ac.jp">koide</maintainer>


  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>coco_keypoints</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>coco_keypoints</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_generation</exec_depend>

  <export>
  </export>
</package>
